--- a/sub.html
+++ b/sub.html
@@ -6,7 +6,7 @@
   <body>
  
  <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a href="#home">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
@@ -17,7 +17,7 @@
      <h2>Headings</h2>
     <p>Headings define the outline of your site. There are six levels of
     headings.</p>
-  
+ 
   <form>
   First name:<br>
   <input type="text" name="firstname"><br>
